recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:16: error: identifier expected but ')' found.
    snowSide(levels-1,length/3.)
                               ^Koch:18: error: identifier expected but ')' found.
    snowSide(levels-1,length/3.)
                               ^Koch:20: error: identifier expected but ')' found.
    snowSide(levels-1,length/3.)
                               ^Koch:22: error: identifier expected but ')' found.
    snowSide(levels-1,length/3.)
                               ^